# libswitch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  library.c  library.h  libswitch.c  libswitch.h
.github/workflows/: Compile.yml
